Closed Bug 312743 Opened 19 years ago Closed 19 years ago

DoneAddingChildren is not called for XTF Elements in XUL if the element doesn't have any child nodes.

Categories

(Core Graveyard :: XTF, defect)

defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: smaug, Assigned: smaug)

Details

Attachments

(1 file, 1 obsolete file)

DoneAddingChildren is not called for XTF Elements in XUL if the element doesn't
have any child nodes.
Patch coming.
Attachment #199815 - Attachment is obsolete: true
Attachment #199816 - Flags: superreview?(bryner)
Attachment #199816 - Flags: review?(bryner)
Attachment #199816 - Flags: superreview?(bryner)
Attachment #199816 - Flags: superreview+
Attachment #199816 - Flags: review?(bryner)
Attachment #199816 - Flags: review+
*** Bug 308106 has been marked as a duplicate of this bug. ***
Comment on attachment 199816 [details] [diff] [review]
and better to attach the right patch ;)

Any chance to get this in to 1.8 branch?
This is very low risk, but needed for XForms+XUL.
Attachment #199816 - Flags: approval1.8rc1?
Checked in to trunk
Comment on attachment 199816 [details] [diff] [review]
and better to attach the right patch ;)

FYI, The 1.8 patch would be 
ofc without the PR_FALSE. Only trunk version of DoneAddingChildren method has
the boolean parameter.
Comment on attachment 199816 [details] [diff] [review]
and better to attach the right patch ;)

too late in the game for non-critical bugs without a really compelling case.
Attachment #199816 - Flags: approval1.8rc1? → approval1.8rc1-
Status: NEW → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: