Bug 312743, DoneAddingChildren is not called for XTF Elements in XUL if the element doesn't have any child nodes. r+sr=bryner